# project-bedrock

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: memory-update.md  system-update.md
.cursor/commands/: memory-update.md  system-update.md
.cursor/rules/: bedrock.mdc
.github/workflows/: ci.yml  publish.yml
agent-knowledge/: STATUS.md
agent-knowledge/History/: events.ndjson  history.md
agent-knowledge/Memory/: MEMORY.md  cli.md  conventions.md  gotchas.md  history-layer.md  integrations.md  packaging.md
agent_docs/memory/: MEMORY.md  PROJECT.md  architecture.md  cli.md  conventions.md  deployments.md  glossary.md  gotchas.md  history-layer.md  integrations.md  packaging.md  stack.md  testing.md
assets/commands/: absorb.md  knowledge-sync.md  system-update.md
assets/rules/: history-backfill.mdc  memory-bootstrap.mdc  memory-writeback.mdc  shared-memory.mdc
assets/scripts/: bootstrap-memory-tree.sh  doctor.sh  global-knowledge-sync.sh  graphify-sync.sh  import-agent-history.sh  install-project-links.sh  measure-token-savings.py  ship.sh  update-knowledge.sh  validate-knowledge.sh
assets/skills/: SKILLS.md
bedrock/: STATUS.md
bedrock/History/: events.ndjson  history.md
bedrock/Memory/: MEMORY.md  architecture.md  cli.md  (+3 more)
docs/: reference.md
rules/: workflow-orchestration.mdc
scripts/: bootstrap-memory-tree.sh  doctor.sh  global-knowledge-sync.sh  import-agent-history.sh  install-project-links.sh  install.sh  list.sh  measure-token-savings.py  ship.sh  uninstall.sh  update-knowledge.sh  validate-knowledge.sh
tests/: test_cli.py  test_packaging.py
(+116 files in other folders)
